--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,6 +227,16 @@ body {
 .box--position {
   transform: translate(0, -50px);
 }
+@media only screen and (min-width: 768px) {
+  .box--position {
+    transform: translate(0, -20px);
+  }
+}
+@media only screen and (min-width: 992px) {
+  .box--position {
+    transform: translate(0, -100px);
+  }
+}
 
 @media only screen and (min-width: 992px) {
   #foncton {
@@ -519,15 +529,22 @@ p.place-restaurant {
 
 .profil .photo__profil {
   width: 100%;
+  object-fit: cover;
 }
 @media only screen and (min-width: 768px) {
   .profil {
     height: 400px;
   }
-  .profil .photo__profil img {
+  .profil .photo__profil {
+    height: 330px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .profil {
     height: 400px;
-    object-fit: cover;
-    object-position: center;
+  }
+  .profil .photo__profil {
+    height: 330px;
   }
 }
 
@@ -656,14 +673,12 @@ p.place-restaurant {
 
 .heart-animated {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   opacity: 0;
-  transition: all 2s;
-  font-size: 3px;
+  transition: all 0.8s;
 }
 .heart-animated:hover {
-  font-size: 64px;
   opacity: 1;
   top: 0;
   left: 0;
