--- a/sass/composants/_favoriteHeart.scss
+++ b/sass/composants/_favoriteHeart.scss
@@ -5,12 +5,12 @@
 
 .heart-animated{
     position: absolute;
-    top: 50%; left: 50%;
+    top: 0; left: 0;
     opacity: 0;
-    transition: all 2s;
-    font-size: 3px;
+    transition: all .8s;
+    //font-size: 3px;
     &:hover{
-        font-size: 64px;
+        //font-size: 34px;
         opacity: 1;
         top: 0; left: 0;
     }
