--- a/sass/composants/_section.scss
+++ b/sass/composants/_section.scss
@@ -34,6 +34,12 @@
 
 .box--position{
     transform: translate(0, -50px);
+    @include tablet {
+        transform: translate(0, -20px);
+    }
+    @include desktop {
+        transform: translate(0, -100px);
+    }
 }
 
 #foncton{
