--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,16 +225,16 @@ body {
 }
 
 .box--position {
-  transform: translate(0, -50px);
+  transform: translate(0, 0);
 }
 @media only screen and (min-width: 768px) {
   .box--position {
-    transform: translate(0, -20px);
+    transform: translate(0, 0);
   }
 }
 @media only screen and (min-width: 992px) {
   .box--position {
-    transform: translate(0, -100px);
+    transform: translate(0, 0);
   }
 }
 
@@ -251,6 +251,9 @@ body {
 }
 @media only screen and (min-width: 992px) {
   .fonctionnement {
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
     border-top-left-radius: 45px;
     border-top-right-radius: 45px;
   }
@@ -258,6 +261,14 @@ body {
 
 #restaurants {
   background-color: #f6f6f6;
+}
+
+@media only screen and (min-width: 992px) {
+  .restaurants__list {
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .reservation {
@@ -278,6 +289,24 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media only screen and (min-width: 992px) {
+  .name {
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .menu {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 section.command {
@@ -370,7 +399,7 @@ button:hover {
 @media only screen and (min-width: 768px) {
   .pannel {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 40px;
   }
 }
@@ -386,6 +415,7 @@ button:hover {
 }
 @media only screen and (min-width: 768px) {
   .pannel .sticker {
+    width: 100%;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -493,7 +523,6 @@ button:hover {
   width: 100%;
   height: 180px;
   object-fit: cover;
-  object-position: bottom;
 }
 .card__pic .picture--center {
   width: 100%;
@@ -527,25 +556,26 @@ p.place-restaurant {
   color: rgba(53, 53, 53, 0.8);
 }
 
+.profil {
+  /*
+      @include tablet{
+          height: 400px;
+          .photo__profil{
+              height: 330px;
+          }
+      }
+
+      @include desktop{
+          height: 400px;
+          .photo__profil{
+              height: 330px;
+          }
+      }*/
+}
 .profil .photo__profil {
   width: 100%;
+  height: 215px;
   object-fit: cover;
-}
-@media only screen and (min-width: 768px) {
-  .profil {
-    height: 400px;
-  }
-  .profil .photo__profil {
-    height: 330px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .profil {
-    height: 400px;
-  }
-  .profil .photo__profil {
-    height: 330px;
-  }
 }
 
 .menu-pannel {
@@ -568,6 +598,12 @@ p.place-restaurant {
 @media only screen and (min-width: 768px) {
   .menu-pannel {
     flex-flow: row wrap;
+    justify-content: space-between;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .menu-pannel {
+    flex-flow: column nowrap;
     justify-content: space-between;
   }
 }
@@ -631,6 +667,11 @@ p.place-restaurant {
 @media only screen and (min-width: 768px) {
   .plate {
     width: 30%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .plate {
+    width: 92%;
   }
 }
 
