--- a/sass/composants/_sticker.scss
+++ b/sass/composants/_sticker.scss
@@ -4,7 +4,7 @@
     padding: 0px;
     @include tablet{
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         margin-top: 40px;
     }
 
@@ -18,6 +18,7 @@
         box-shadow: 1px 5px 15px 0px rgb($color-blackened, 0.3);
         font-size: 16px;
         @include tablet{
+            width: 100%;
             margin-left: 10px;
             margin-right: 10px;
         }
