--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,22 +4,37 @@ footer{
     justify-content: flex-start;
     padding: 20px;
     background-color: $color-blackened;
+    @include desktop{
+        .footer-links{
+            @include maxview;
+        }
+    }
+    
     h3{
         font-size: 22px;
     }
     ul{
         padding: 0;
+        @include desktop{
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-around;
+        }
     }
+
     li{
         list-style-type: none;
         padding-bottom: 8px;
+        @include desktop{
+            margin-right: 25px;
+        }
     }
     a{
         text-decoration: none;
         font-size: 16px;
         color: white;
         i{
-            padding-right: 10px;
+            padding-right: 5px;
         }
         &:hover{
             color: #9356DC;
